WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201493
[WinCairo][WK1] ASSERTION FAILED: !isAcceleratedCompositing() in WebView::updateBackingStore
https://bugs.webkit.org/show_bug.cgi?id=201493
Summary
[WinCairo][WK1] ASSERTION FAILED: !isAcceleratedCompositing() in WebView::upd...
Fujii Hironori
Reported
2019-09-04 23:12:29 PDT
[WinCairo][WK1] ASSERTION FAILED: !isAcceleratedCompositing() Some tests are reporting an assertion failure. ASSERTION FAILED: !isAcceleratedCompositing() ..\..\Source\WebKitLegacy\win\WebView.cpp(1132) : updateBackingStore
https://build.webkit.org/results/WinCairo%2064-bit%20WKL%20Debug%20(Tests)/r249500%20(2264)/results.html
css3/filters/multiple-filters-invalidation.html fast/animation/css-animation-resuming-when-visible-with-style-change.html
Attachments
multiple-filters-invalidation-crash-log.txt
(75.25 KB, text/plain)
2019-09-04 23:16 PDT
,
Fujii Hironori
no flags
Details
css-animation-resuming-when-visible-with-style-change-crash-log.txt
(57.36 KB, text/plain)
2019-09-04 23:16 PDT
,
Fujii Hironori
no flags
Details
Patch
(1.93 KB, patch)
2019-09-04 23:57 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-09-04 23:16:24 PDT
Created
attachment 378047
[details]
multiple-filters-invalidation-crash-log.txt
Fujii Hironori
Comment 2
2019-09-04 23:16:39 PDT
Created
attachment 378048
[details]
css-animation-resuming-when-visible-with-style-change-crash-log.txt
Fujii Hironori
Comment 3
2019-09-04 23:57:54 PDT
Created
attachment 378050
[details]
Patch
Fujii Hironori
Comment 4
2019-09-05 18:46:37 PDT
Comment on
attachment 378050
[details]
Patch Clearing flags on attachment: 378050 Committed
r249558
: <
https://trac.webkit.org/changeset/249558
>
Fujii Hironori
Comment 5
2019-09-05 18:46:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-09-05 18:47:20 PDT
<
rdar://problem/55095660
>
Radar WebKit Bug Importer
Comment 7
2019-09-05 18:47:27 PDT
<
rdar://problem/55095665
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug