[WinCairo][WK1] ASSERTION FAILED: !isAcceleratedCompositing() in WebView::updateBackingStore https://bugs.webkit.org/show_bug.cgi?id=201493

Reviewed by Don Olmstead.

WebView::paint switches painting code path by checking accelerated
compositing enabled. However, accelerated compositing could be
enabled after the checking.

WebView::paint called WebView::paintCompositedContentToHDC and
WebCore::Page::updateRendering.
WebView::paintCompositedContentToHDC checks accelerated
compositing enabled. Then, WebCore::Page::updateRendering executes
JavaScript and accelerated compositing could be enabled.

* WebView.cpp:
(WebView::paint): Call WebCore::Page::updateRendering the
beginning of the function.

Canonical link: https://commits.webkit.org/215158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249558 268f45cc-cd09-0410-ab3c-d52691b4dbfc